--- a/src/app/page-about/page-about.component.html
+++ b/src/app/page-about/page-about.component.html
@@ -37,15 +37,6 @@
                             <path d="M15 6v3h3l3 -3h-3v-3z" />
                             <path d="M15 9l-3 3" />
                         </svg><br><span>Experience</span></label></li>
-                <li title="Location"><label for="tab4" role="button"><svg xmlns="http://www.w3.org/2000/svg"
-                            class="icon icon-tabler icon-tabler-map-pin" width="24" height="24" viewBox="0 0 24 24"
-                            stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
-                            stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                            <path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
-                            <path
-                                d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
-                        </svg><br><span>Location</span></label></li>
             </ul>
             <div class="slider">
                 <div class="indicator"></div>
@@ -53,12 +44,9 @@
             <div class="content">
                 <section>
                     <h2>Myself</h2>
-                    <div class="desc">Hi, <br>I'm Sandip Gupta, a 23-year-old enthusiastic software/web developer specializing in Full
-                        Stack
-                        Developement.
-                        <br>Crafting seamless digital experiences is my forte, where coding is an art of
-                        innovation. With a knack for problem-solving and adaptability, I bring a dynamic edge to every
-                        project. Let's redefine the future of technology together.</div>
+                    <div class="desc">Hi, <br>I'm Sandip Gupta, a 24-year-old Full Stack Developer crafting digital experiences that make an impact. I transform complex challenges into elegant solutions through clean code and innovative thinking.
+                        <br><br>At Zycus, I'm not just writing code – I'm building the future of enterprise software. My passion lies in creating scalable applications that don't just work, but inspire.
+                        <br><br>Let's build something extraordinary together.</div>
                 </section>
                 <section>
                     <h2>Education</h2>
@@ -81,15 +69,6 @@
                             <h3>Zycus Infotech Pvt. Ltd.</h3>
                             <em>Software Engineer</em><br>
                             <em>Oct 2023 - Present</em>
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    <h2>Location</h2>
-                    <div class="desc">
-                        <div class="ad">
-                            <h3>Current Address</h3>
-                            <em>Mumbra, Dist. Thane, India - 400612</em><br>
                         </div>
                     </div>
                 </section>
