--- a/src/app/float-navbar/float-navbar.component.html
+++ b/src/app/float-navbar/float-navbar.component.html
@@ -1,20 +1,17 @@
 <div class="float-container">
-    <div class="navbar">
-        <ul>
-            <!-- <li *ngFor="let section of sections" >
-                <a [class.active]="isSectionActive(section.id)" (click)="scrollTo(section.id)">
-                    {{ section.label }}
-                </a>
-            </li> -->
-            <!-- <li *ngFor="let section of sections">
-                <a id="_{{section.id}}" (click)="scrollTo(section.id)">{{ section.name }}</a>
-            </li> -->
-            <li><a id="section-intro-" (click)="scrollTo('section-intro')">Hello</a></li>
-            <li><a id="section-about-" (click)="scrollTo('section-about')">About</a></li>
-            <li><a id="section-skills-" (click)="scrollTo('section-skills')">Skills</a></li>
-            <li><a id="section-projects-" (click)="scrollTo('section-projects')">Projects</a></li>
-            <li><a id="section-contact-" (click)="scrollTo('section-contact')">Contact</a></li>
-        </ul>
-        
-    </div>
+    <nav class="navbar" [class.scrolled]="isScrolled">
+        <div class="nav-container">
+            <ul class="nav-links">
+                <li *ngFor="let section of sections">
+                    <a 
+                        [class.active]="activeSection === section.id"
+                        (click)="scrollTo(section.id)"
+                        class="nav-link"
+                    >
+                        {{ section.label }}
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </div>
