--- a/src/app/float-navbar/float-navbar.component.scss
+++ b/src/app/float-navbar/float-navbar.component.scss
@@ -1,4 +1,3 @@
-
 .float-container {
     font-size: 1rem;
     margin: 3vw auto;
@@ -48,7 +47,7 @@ ul {
 }
 
 li {
-    font-family: 'Work Sans', sans-serif;
+    font-family: var(--font-accent);
     font-size: 1.15em;
     list-style: none;
 }
@@ -60,24 +59,28 @@ li>a {
     color: inherit;
     transition: 0.6s;
     cursor: pointer;
+    font-weight: var(--font-medium);
 }
+
 .inactive {
     color: #c0c0c0 !important;
     transition: 0.6s;
     text-shadow: none !important;
+    font-weight: var(--font-regular);
 }
 
 li>a:hover {
     transition: 0.3s;
     color: #ffffff;
     text-shadow: 0 0 3px #00ADB5, 0 0 6px #00ADB5, 0 0 9px #00ADB5;
-
+    font-weight: var(--font-semibold);
 }
 
 .active {
     transition: 0.3s;
     color: #ffffff !important;
     text-shadow: 0 0 3px #00ADB5, 0 0 6px #00ADB5, 0 0 9px #00ADB5;
+    font-weight: var(--font-semibold);
 }
 
 @media screen and (max-width: 900px) {
