--- a/src/app/page-about-mobile/page-about-mobile.component.html
+++ b/src/app/page-about-mobile/page-about-mobile.component.html
@@ -16,11 +16,9 @@
                 <span>Myself</span>
                 <div class="bar"></div>
             </div>
-            <div class="desc" style="font-size: 17px; text-align:start; padding:25px 10px 30px 30px">Hi, <br>I'm Sandip Gupta, a 23-year-old enthusiastic software/web developer specializing
-                in Full Stack Developement.
-                <br>Crafting seamless digital experiences is my forte, where coding is an art of
-                innovation. With a knack for problem-solving and adaptability, I bring a dynamic edge to every
-                project. Let's redefine the future of technology together.
+            <div class="desc" style="font-size: 17px; text-align:start; padding:25px 10px 30px 30px">Hi, <br>I'm Sandip Gupta, a 24-year-old Full Stack Developer crafting digital experiences that make an impact. I transform complex challenges into elegant solutions through clean code and innovative thinking.
+                <br><br>At Zycus, I'm not just writing code – I'm building the future of enterprise software. My passion lies in creating scalable applications that don't just work, but inspire.
+                <br><br>Let's build something extraordinary together.
             </div>
         </div>
         <div class="tab" id="edu" [ngClass]="{'active':isEdu}">
