--- a/src/app/page-intro/page-intro.component.html
+++ b/src/app/page-intro/page-intro.component.html
@@ -1,19 +1,21 @@
 <div class="main">
     <div class="intro">
-        <div class="hello">
-            <h3>Hello world</h3>
-        </div>
-        <div class="iam">
-            <h3>I am</h3>
-        </div>
-        <div class="name">
-            <h1>Sandip Gupta</h1>
-        </div>
-        <div class="role">
-            <h3>( Strangedip )</h3>
-        </div>
-        <div class="role">
-            <h3>Web / Software Developer</h3>
+        <div class="text-container">
+            <div class="hello">
+                <h3>Hello world</h3>
+            </div>
+            <div class="iam">
+                <h3>I am</h3>
+            </div>
+            <div class="name">
+                <h1>Sandip Gupta</h1>
+            </div>
+            <div class="role">
+                <h3>( Strangedip )</h3>
+            </div>
+            <div class="role">
+                <h3>Web / Software Developer</h3>
+            </div>
         </div>
     </div>
 </div>
